src/objects/Meeting_Participant_MERC__c.object
<CustomObject>
    <description>Object to store Meeting Participants associated to the meeting, e.g. attendees of a meeting. Integrates with Veeva : MERC : Created on 09/27/2013 by Katy Lorenti, Mavens Consulting</description>
    <fields>
        <fullName>Account_External_MERC__c</fullName>
        <formula>Account_MERC__r.Cust_Id_GLBL__c</formula>
        <label>Account External</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <description>Lookup to Account from Event Participant. Created 9/28/2013 by KLorenti.</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee_GLBL</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HCP_GLBL</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Non_HCP_MERC</value>
            </filterItems>
            <infoMessage>Only HCP or Employee accounts can be added over here.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Participants</relationshipLabel>
        <relationshipName>Event_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Name_MERC__c</fullName>
        <description>Used to pull account name down. Initially added because Process Builder was not accessing Account_MERC__r.Name properly : MERC : Created on 18/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <formula>Account_MERC__r.LastName + &apos;, &apos; + Account_MERC__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountable_Business_Contact_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lilly contact accountable to answer questions or own follow-ups related to this Meeting Participant : MERC : Created on 22/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>The Lilly contact accountable to answer questions or own follow-ups related to this Meeting Participant</inlineHelpText>
        <label>Accountable Business Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee_GLBL</value>
            </filterItems>
            <infoMessage>If you cannot find the record you&apos;re looking for. Select the &quot;All Fields&quot; option to search across additional criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Participants (Accountable Business Contact)</relationshipLabel>
        <relationshipName>Accountable_Business_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable_Business_Contact_Name_MERC__c</fullName>
        <description>The name of the Accountable Business Contact for output into Templates for DrawLoop and Email : MERC : Created on 27/08/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Accountable_Business_Contact_MERC__r.FirstName &amp; &quot; &quot; &amp; Accountable_Business_Contact_MERC__r.LastName</formula>
        <label>Accountable Business Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_on_Web_Service_MERC__c</fullName>
        <description>Indicates whether or not the Meeting Participant should be available on the Web Service.  Created 05/15/2014 by KLorenti, Mavens Consulting</description>
        <formula>CASE(Status_MERC__c,
&apos;Invited&apos;, 1,
&apos;Accepted&apos;, 1,
&apos;Declined&apos;, 1, 
0) == 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active on Web Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Travel_Details_MERC__c</fullName>
        <description>Records additional travel details of the Meeting Participant. Created by John A Adams 3/19/2014</description>
        <label>Additional Travel Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Air_Travel_No_Longer_Required_MERC__c</fullName>
        <description>Used by portal to capture if Meeting Participant no longer requires Air Travel, if Air Travel was previously required. Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <label>Was Air Travel offered and then declined</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Air_Travel_Required_MERC__c</fullName>
        <description>Created to capture if Air Travel is required for Meeting Participant. Created 11/22/2013 by Mavens Consulting</description>
        <label>Air Travel Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alliance_MERC__c</fullName>
        <description>Used to return a different FMV rate for each Country if there is an alliance partnership for the meeting and service provider : MERC : Created on 21/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Select the applicable alliance partner if the meeting is within scope of an alliance partnership</inlineHelpText>
        <label>Alliance</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BI Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_Paid_MERC__c</fullName>
        <description>Amount to be Paid for sponsorship. Created 01/14/2014 by KLorenti, Mavens Consulting</description>
        <label>Amount to be Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anonymise_Record_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</description>
        <inlineHelpText>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</inlineHelpText>
        <label>Anonymise Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Countries_MERC__c</fullName>
        <description>Pulls down the Meeting Participant Country.  Ensures Participants end up in the correct Veeva Org. Oliver Dunford 14th April 2014.</description>
        <formula>TEXT(Account_MERC__r.Country_of_Residence_GLBL__c)</formula>
        <label>Associated Countries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFT_Logistics_Comments_MERC__c</fullName>
        <description>Used to communicate Meeting Participant Logistics Comments with Customer Facing Users in Veeva/Mercury : MERC : Created on 18/08/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Logistics comments entered by Customer Facing User viewable and editable by Regional and Local teams. Country privacy and compliance requirements must apply</inlineHelpText>
        <label>CFT Logistics Comments</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notice_Sent_MERC__c</fullName>
        <description>Captures when a Cancellation Notice was sent to the meeting participant. Created 11/5/2013 by KLorenti, Mavens Consulting.</description>
        <label>Cancellation Notice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Classification_MERC__c</fullName>
        <description>Used to display Classification from HCP Profile. Created 11/4/2013 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Clsfctn_Cd_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Flight_Rail_MERC__c</fullName>
        <description>This will convert the positive CoPay values entered by a user into negative values to be sent to Activity ODS.  Created by John A Adams 2/4/2014</description>
        <formula>IF (CoPay_Flight_Rail_MERC__c &gt; 0 , CoPay_Flight_Rail_MERC__c - ( 2 * CoPay_Flight_Rail_MERC__c ), CoPay_Flight_Rail_MERC__c)</formula>
        <label>CoPay AODS Flight/Rail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Food_Beverage_MERC__c</fullName>
        <description>This will convert the positive CoPay values entered by a user into negative values to be sent to Activity ODS.  Created by John A Adams 2/4/2014</description>
        <formula>IF (CoPay_Food_Beverage_MERC__c &gt; 0 , CoPay_Food_Beverage_MERC__c  - ( 2 * CoPay_Food_Beverage_MERC__c  ), CoPay_Food_Beverage_MERC__c )</formula>
        <label>CoPay AODS Food Beverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Ground_Transport_MERC__c</fullName>
        <description>This will convert the positive CoPay values entered by a user into negative values to be sent to Activity ODS.  Created by John A Adams 2/4/2014</description>
        <formula>IF (CoPay_Ground_Transport_MERC__c &gt;0 , CoPay_Ground_Transport_MERC__c - ( 2 * CoPay_Ground_Transport_MERC__c ), CoPay_Ground_Transport_MERC__c)</formula>
        <label>CoPay AODS Group Ground Transportation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Hotel_MERC__c</fullName>
        <description>This will convert the positive CoPay values entered by a user into negative values to be sent to Activity ODS.  Created by John A Adams 2/4/2014</description>
        <formula>IF (CoPay_Hotel_MERC__c &gt; 0 , CoPay_Hotel_MERC__c - ( 2 * CoPay_Hotel_MERC__c ), CoPay_Hotel_MERC__c)</formula>
        <label>CoPay AODS Hotel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Indiv_Transportation_MERC__c</fullName>
        <formula>IF (CoPay_Individual_Transport_MERC__c &gt; 0 , CoPay_Individual_Transport_MERC__c - ( 2 * CoPay_Individual_Transport_MERC__c ), CoPay_Individual_Transport_MERC__c)</formula>
        <label>CoPay AODS Individual Transportation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_AODS_Registration_MERC__c</fullName>
        <description>This will convert the positive CoPay values entered by a user into negative values to be sent to Activity ODS.  Created by John A Adams 2/4/2014</description>
        <formula>IF (CoPay_Registration_MERC__c &gt; 0 , CoPay_Registration_MERC__c - ( 2 * CoPay_Registration_MERC__c ), CoPay_Registration_MERC__c)</formula>
        <label>CoPay AODS Registration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Flight_Rail_MERC__c</fullName>
        <description>Capture CoPay amount for Flight/Rail ToV as a credit. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>CoPay Transportation paid by Lilly&apos;s Travel Agent</inlineHelpText>
        <label>CoPay Transport Paid by Lilly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Food_Beverage_MERC__c</fullName>
        <description>Capture CoPay amount for Food &amp; Beverage ToV as a credit. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <label>CoPay Food &amp; Beverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Ground_Transport_MERC__c</fullName>
        <description>Capture CoPay amount for Group Ground Transport ToV as a credit. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <label>CoPay Group Ground Transport</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Hotel_MERC__c</fullName>
        <description>Capture CoPay amount for Hotel ToV as a credit. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <label>CoPay Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Individual_Transport_MERC__c</fullName>
        <description>Capture CoPay amount for Individual Transport ToV as a credit : MERC : Created on 16/01/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>CoPay Individual Transport</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPay_Registration_MERC__c</fullName>
        <description>Capture CoPay amount for Registration ToV as a credit. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <label>CoPay Registration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Communication_Channel_MERC__c</fullName>
        <description>This field displays Communication Channel(originally coming from Preference &amp; Consent record).</description>
        <formula>Account_MERC__r.Communication_Channel_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Final_Fee_MERC__c</fullName>
        <description>Used to confirm and trigger the setting of the Final Fee. Oliver Dunford 5th Nov 2013.</description>
        <label>Confirm Final Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Confirmation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirm_Partial_Payment_Amount_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HCP Care to confirm they want to update the Final Fee with the Partial Payment Amount. Created 12/18/2013 by KLorenti, Mavens Consulting.</description>
        <label>Confirm Partial Payment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_ToV_Reporting_Change_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only HCP Care can update ToV values after ToV has already been reported. Only HCP Care will have access to this field. Created 02/04/2014 by KLorenti, Mavens Consulting</description>
        <label>Confirm ToV Reporting Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Congress_Additional_Information_MERC__c</fullName>
        <description>Populated by the HCP if they need to provide additional information on the Web Service for Congress Registration : MERC : Created on 21/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <label>Congress Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Congress_Membership_Id_MERC__c</fullName>
        <description>Captures Registration Id of HCP for Independent Meetings: MERC : Created on 21/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <label>Congress Membership Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Details_Fax_MERC__c</fullName>
        <description>Contact information populated against the MP in Mercury or via the Salesrep in Veeva.  To be manually cleared down and copied to Account record by Regional CMS : MERC : Created on 17/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Data that HCP has provided to Meeting Owner or CFT that has invited him/her for logistics/meetings or contract purposes. This data will be transferred at account level by CMS teams.</inlineHelpText>
        <label>Contact Details - Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Details_Mobile_MERC__c</fullName>
        <description>Contact information populated against the MP in Mercury or via the Salesrep in Veeva.  To be manually cleared down and copied to Account record by Regional CMS : MERC : Created on 17/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Data that HCP has provided to Meeting Owner or CFT that has invited him/her for logistics/meetings or contract purposes. This data will be transferred at account level by CMS teams.</inlineHelpText>
        <label>Contact Details - Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Details_Work_Phone_MERC__c</fullName>
        <description>Contact information populated against the MP in Mercury or via the Salesrep in Veeva.  To be manually cleared down and copied to Account record by Regional CMS : MERC : Created on 17/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Data that HCP has provided to Meeting Owner or CFT that has invited him/her for logistics/meetings or contract purposes. This data will be transferred at account level by CMS teams.</inlineHelpText>
        <label>Contact Details - Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Already_Exists_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A contract should already be in place and thus a new contract is not required.</description>
        <inlineHelpText>Indicates that a valid contract is in place and a new contract is not required for this Meeting. The Service Provider has been added to the Meeting for logistics or ToV purposes.</inlineHelpText>
        <label>Contract Already Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Limitations_on_Use_MERC__c</fullName>
        <description>Display Contract Limitations on Use on Meeting Participant from HCP Profile. Created 11/26/2013 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Contract_Limitations_on_Use_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Limitations on Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Required_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track whether or not HCP needs to provide CoPay. Created 12/2/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>CoPay values must be entered as positive amounts.</inlineHelpText>
        <label>Copay Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence_MERC__c</fullName>
        <description>Country of Residence from HCP Profile - used to determine Min/Max rates based on Tier
Created by John A Adams 10/31/2013</description>
        <formula>TEXT(Account_MERC__r.Country_of_Residence_GLBL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Process_MERC__c</fullName>
        <description>The Current Process of the Meeting Participant - stamped from Meeting Tasks object : MERC : Created on 29/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Current Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Task_Due_Date_MERC__c</fullName>
        <description>The latest process information from to be shared with users : MERC : Created on 30/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Current Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Task_Name_MERC__c</fullName>
        <description>The latest process information from to be shared with users : MERC : Created on 30/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Current Task Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id_GLBL__c</fullName>
        <description>Unique identifier for a customer as assigned by Lilly. Pulled from HCP profile.  Created by John Adams on 12/9/2013</description>
        <formula>Account_MERC__r.Cust_Id_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Services_Rendered_set_to_Yes_MERC__c</fullName>
        <description>Sets the date to the current day when the Services Rendered field is set to Yes.  Used for SLA purposes : MERC : Created on 26/02/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>The date that the Services Rendered field was set to &quot;Yes&quot;.  Used for SLA purposes.</inlineHelpText>
        <label>Date Services Rendered set to Yes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Check_In_MERC__c</fullName>
        <description>Date meeting participant of checks into accommodations. 
Created by John A Adams 3/19/2014</description>
        <label>Date of Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Check_Out_MERC__c</fullName>
        <description>The date the meeting participant  checks out of accommodations. 
Created by John A Adams 3/19/2014</description>
        <label>Date of Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Meeting_MERC__c</fullName>
        <description>Calculates days until Meeting start date. Created 01/30/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_MERC__r.Date_of_Event_MERC__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Service_MERC__c</fullName>
        <description>To capture description of service provided by HCP. Created 11/20/2013 by KLorenti, Mavens Consulting</description>
        <label>Description of Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_Preferences_Step_Complete_MERC__c</fullName>
        <description>If Dietary Preference Values exist, then this step is considered completed. Created 05/02/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF(Account_MERC__r.Count_Dietary_Preferences_MERC__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dietary Preferences Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_Contract_Status_MERC__c</fullName>
        <description>Stamped by Docusign Connect for the related HCP Contract.</description>
        <label>Docusign Contract Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_Id_MERC__c</fullName>
        <externalId>true</externalId>
        <label>Docusign Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Formula_MERC__c</fullName>
        <description>Pulls down the Mercury PersonEmail address from the HCP record : MERC : Created on 12/08/2014 by Oliver Dunford, Mavens Consulting</description>
        <formula>Account_MERC__r.PersonEmail</formula>
        <inlineHelpText>The HCPs email address for Meeting and Contract correspondence.</inlineHelpText>
        <label>Participant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_MERC__c</fullName>
        <description>Stamped by Apex Trigger</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_to_Invite_HCP_to_Portal_MERC__c</fullName>
        <description>Email address entered by Sales Rep if HCP needs inviting to the Portal - Label Renamed for R6 Mercury Release. Oliver Dunford 10th Jan.</description>
        <inlineHelpText>Data that HCP has provided to Meeting Owner or CFT that has invited him/her for logistics/meetings or contract purposes. This data will be transferred at account level by CMS teams.</inlineHelpText>
        <label>Email Address for Meetings/Logistics</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Step_Complete_MERC__c</fullName>
        <description>Determines if Emergency Contact information exists and indicates completion of that step on the portal. Created 05/04/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF (!ISBLANK(Account_MERC__r.Emergency_Contact_Name_MERC__c) &amp;&amp; !ISBLANK(Account_MERC__r.Emergency_Contact_Phone_Number_MERC__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emergency Contact Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_Meeting_Process_Logic_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to kick-off Meeting Process Logic and Automation.  Set via workflow, unchecked when code runs : MERC : Created on 22/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Evaluate Meeting Process Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Customer_Id_MERC__c</fullName>
        <description>Unique identifier of the relationship of the customer at the event. Combination of Meeting Id &amp; Meeting Participant Id.
Created by John Adams on 12/9/2013</description>
        <formula>Meeting_MERC__r.Id &amp; &quot;-&quot; &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Hrs_MERC__c</fullName>
        <description>Event Time Hours. Created 10/10/2013 by KLorenti.</description>
        <inlineHelpText>Rounds Event Time to nearest 15 minutes upon save.  A preparation value of 1.25 indicates 1hr and 15 minutes.</inlineHelpText>
        <label>Event Time (hrs)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Contract_Info_MERC__c</fullName>
        <description>This field must be mandatory if Contract Already Exists field has been checked.</description>
        <inlineHelpText>Provide information and references of existing contract for audit purposes.</inlineHelpText>
        <label>Existing Contract Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMV_Criteria_Map_MERC__c</fullName>
        <description>Pulls down the FMV Criteria Map field from the Account object in order to lookup the correct FMV value based on qualifications and Tier of HCP.</description>
        <formula>IF(
	(TEXT( Alliance_MERC__c ) = &quot;Not Applicable&quot;) || (ISBLANK(TEXT(Alliance_MERC__c))), 
		Account_MERC__r.FMV_Criteria_Map_MERC__c, 
			Account_MERC__r.FMV_Criteria_Map_MERC__c &amp; &quot; - &quot; &amp; TEXT(Alliance_MERC__c)
)</formula>
        <label>FMV Criteria Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Fee_Confirmed_Date_MERC__c</fullName>
        <description>Stamped via workflow, the date where the final fee was confirmed : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Final Fee Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Fee_MERC__c</fullName>
        <description>Can be used to override the calculated Maximum Fee.  This is the figure used within the Invoicing Process.  Created by Oliver Dunford 31st Oct 2013.</description>
        <label>Final Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Fee_Rollup_MERC__c</fullName>
        <description>&quot;Shadow&quot; field for the Final_Fee_MERC__c to be used for CAP rollups.</description>
        <label>Final Fee Rollup MERC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Status_MERC__c</fullName>
        <description>The Current Process State of the Meeting Participant - Task Status Field - stamped from Meeting Tasks object : MERC : Created on 29/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Follow Up Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Unique_Participant_MERC__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stamped via workflow to enforce a unique participant per Meeting.  If someone is a Speaker, they&apos;re primarily a Speaker and not both a Speaker and Delegate.</description>
        <label>Force Unique Participant</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_Id_MERC__c</fullName>
        <description>Returns the global Id of the Lilly Employee should they be a delegate/speaker at the meeting.</description>
        <formula>IF(Account_MERC__r.RecordType.Name = &quot;Employee&quot;, Account_MERC__r.Prsnl_Nbr_GLBL__c,&quot;&quot;)</formula>
        <label>Global Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Pack_Received_Date_MERC__c</fullName>
        <description>MERC - Date HCP Info Pack is received.  Pulled through from Account object (where set via workflow rule).  Created by Mike Cashman, Mavens Consulting on 3/3/15.</description>
        <formula>Account_MERC__r.HCP_Info_Pack_Received_Date_MERC__c</formula>
        <label>HCP Info Pack Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Comm_Details_MERC__c</fullName>
        <description>Mapped from Participants orginating from Veeva so that SalesRep can communicate the contact details of the HCP for follow up correspondence.  Oliver Dunford 10th Jan.</description>
        <inlineHelpText>Not required if “Service provider” box is checked on HCP profile. You must ask HCP to provide this data to you for the purposes of logistics. E.g. Fax 44 2222 33333.</inlineHelpText>
        <label>HCP Info Package Communication Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Follow_Up_Date_MERC__c</fullName>
        <description>Date on which to follow up with HCP regarding status of HCP Info Package (to be sent back from HCP).  Should be set by user.  Available via reporting for greater ease of HCP Info Pack tracking/ processing.  Created by Mike Cashman, Mavens Consulting on 23/2/2015.</description>
        <inlineHelpText>Can be used by CMS Cork to indicate when they should follow up with the Meeting Owner/HCP should the HCP Info Pack remain outstanding.  This is used to drive reporting on all outstanding HCP Info Packs and should be updated manually by CMS Cork.</inlineHelpText>
        <label>HCP Info Package Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Sent_Date_MERC__c</fullName>
        <description>Date on which Info Package was sent to HCP.  Used in SLA Reporting.  Created by Mike Cashman, Mavens Consulting on 23/2/2015.</description>
        <inlineHelpText>This field should be manually set once the HCP Info Pack has been sent to the HCP.  If the HCP preference is population via the Web Services, this should be set to the date that they were invited to populate the HCP Info Pack via the Web Service.</inlineHelpText>
        <label>HCP Info Package Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Status_MERC__c</fullName>
        <description>Pulls through HCP Info Pack Status value to Meeting Participant record for greater ease of tracking.</description>
        <formula>TEXT(Account_MERC__r.HCP_Info_Package_Status_MERC__c)</formula>
        <inlineHelpText>Pulled from the HCP profile and shows the status of HCP Info Pack completion.  For a paper based process, the field on the HCP Profile should be set manually to &apos;Submitted&apos; once completed, this is automatic if completed by the HCP via the Web Service.</inlineHelpText>
        <label>HCP Info Package Status</label>
        <type>Text</type>
    </fields>
</CustomObject>